#1 add : yml, git ignore 파일 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### jwt secure
+src/main/resources/*
+application.yml
+application-secret.yml
+
+## Qclass
+build/generated
+src/main/generated
+
+## 이미지들
+src/main/promedia/*
+src/main/prodmedia/image/*
