--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8180
 
+upload:
+  image:
+    location: src/main/prodmedia/image/
+
 spring:
 
   session:
@@ -17,7 +21,7 @@ spring:
   profiles:
     include: secret
 
-  # Database
+  # database
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/eci
@@ -28,14 +32,16 @@ spring:
   # jpa properties
   jpa:
     hibernate:
-      ddl-auto: create # update # When you launch the application for the first time - switch "none" at "create"
+      ddl-auto: create
+      # update # When you launch the application for the first time
+      # switch "none" at "create"
     show-sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
     generate-ddl: true
 
-  # 파일 업로드 크기
+  # file upload
   servlet.multipart.max-file-size: 1500MB
   servlet.multipart.max-request-size: 1500MB
 
@@ -43,7 +49,3 @@ spring:
   http.encoding.charset: UTF-8
   http.encoding.enabled: true
   http.encoding.force: true
-
-upload:
-  image:
-    location: src/main/prodmedia/image/
