--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-	id 'java'
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+	id 'java'
 }
+
+apply plugin: "io.spring.dependency-management"
 
 group = 'server'
 version = 'thn'
@@ -65,15 +67,28 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 
-	annotationProcessor 'org.projectlombok:lombok'
-
 	//dsl
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+
+	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.1")
+	testRuntimeOnly("org.junit.platform:junit-platform-engine:1.5.1")
+	testRuntimeOnly("org.junit.platform:junit-platform-commons:1.5.1")
+
+	testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.1") {
+		exclude group : 'org.hamcrest',
+				module: 'hamcrest-core'
+		exclude module:'junit-platform-commons'
+	}
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.12'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 
 }
 
@@ -81,36 +96,30 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-
 test {
 	useJUnitPlatform()
 }
-
-clean {
-	delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
-}
-
-
-def querydslSrcDir = 'src/main/generated'
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
 
 querydsl {
-	library = "com.querydsl:querydsl-apt"
 	jpa = true
-	querydslSourcesDir = querydslSrcDir
+	querydslSourcesDir = querydslDir
 }
-
-compileQuerydsl{ // querydsl 컴파일시 사용하는 애노테이션프로세서('com.querydsl.apt.jpa.JPAAnnotationProcessor')의 경로를 querydsl 이 지정한 경로를 이용한다는 선언
+sourceSets {
+	main.java.srcDir querydslDir
+}
+compileQuerydsl{
 	options.annotationProcessorPath = configurations.querydsl
 }
 
 configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
 	querydsl.extendsFrom compileClasspath
 }
 
-sourceSets {
-	main {
-		java {
-			srcDirs = ['src/main/java', querydslSrcDir]
-		}
-	}
+clean {
+	delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
 }
