--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 	//dsl
-	annotationProcessor 'org.projectlombok:lombok'
+	compile('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
