--- a/build.gradle
+++ b/build.gradle
@@ -65,10 +65,10 @@ dependencies {
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 	implementation group: 'org.apache.tika', name: 'tika-core', version: '2.3.0'
 
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok:1.18.20'
 
 	//dsl
-	compile('org.projectlombok:lombok')
+	compile('org.projectlombok:lombok:1.18.20')
 	annotationProcessor('org.projectlombok:lombok')
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
