--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 
 	//dsl
-	compile('org.projectlombok:lombok:1.18.20')
+	compile('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
