#5 delete : test in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -92,17 +92,13 @@ dependencies {
 
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
-
-test {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
+//
+//test {
+//	useJUnitPlatform()
+//}
 
 // query dsl add
 
