#1 add : swagger config

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,11 @@ dependencies {
 	implementation 'org.webjars:stomp-websocket:2.3.4'
 	implementation 'com.google.code.gson:gson:2.9.0'
 
+	// SWAGGER
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+
 	//db
 	runtimeOnly 'com.h2database:h2'
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
