--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
   # jpa properties
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       # update # When you launch the application for the first time
       # switch "none" at "create"
     show-sql: true
