#10 FIX : build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -70,12 +70,11 @@ dependencies {
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 	implementation group: 'org.apache.tika', name: 'tika-core', version: '2.3.0'
 
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok:1.18.20'
 
 	//dsl
 	compile('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
-	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 
@@ -93,39 +92,46 @@ dependencies {
 		exclude module:'junit-platform-commons'
 	}
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.12'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+	testCompileOnly 'org.projectlombok:lombok:1.18.20'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
+//
+//test {
+//	useJUnitPlatform()
+//}
 
-test {
-	useJUnitPlatform()
-}
-//querydsl 추가 시작
-def querydslDir = "$buildDir/generated/querydsl"
+// query dsl add
+
+def querydslSrcDir = 'src/main/generated'
 
 querydsl {
+	library = "com.querydsl:querydsl-apt"
 	jpa = true
-	querydslSourcesDir = querydslDir
+	querydslSourcesDir = querydslSrcDir
 }
-sourceSets {
-	main.java.srcDir querydslDir
-}
+
 compileQuerydsl{
 	options.annotationProcessorPath = configurations.querydsl
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
 	querydsl.extendsFrom compileClasspath
 }
 
-clean {
-	delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java', querydslSrcDir]
+		}
+	}
 }
+
+tasks.withType(JavaCompile) {
+	options.annotationProcessorGeneratedSourcesDirectory = file(querydslSrcDir)
+}
+
