#10 FIX : FILE LOCATION

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -8,4 +8,4 @@ jwt:
 
 default :
   image :
-    address : "src/main/prodmedia/image/default/default.PNG"
+    address : "../../src/main/prodmedia/image/default/default.PNG"
